--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your title
-email: your-email@example.com
-name: Your name
+title: Kelog
+email: youxiang@kezeng.xyz
+name: Ke Zeng
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here.
+  A log
 keywords: [Your keywords]
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-domain: "example.com" # the domain name for your site, e.g. example.com
+url: "https://kezeng.xyz" # the base hostname & protocol for your site, e.g. http://example.com
+domain: "kezeng.xyz" # the domain name for your site, e.g. example.com
 language: en
 # Supported languages list:
 # en: English
