--- a/_config.yml
+++ b/_config.yml
@@ -58,8 +58,8 @@ jekyll-archives:
     - tags
   layout: archive
   permalinks:
-    category: /category/:name/
-    tag: /tag/:name/
+    category: /categories/:name/
+#    tag: /tag/:name/
 
 # Build settings
 markdown: kramdown
