--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,16 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Kelog
+title: 似曾相识
 email: youxiang@kezeng.xyz
 name: Ke Zeng
 description: >- # this means to ignore newlines until "baseurl:"
-  A log
+  "此朕少年事"
 keywords: [Your keywords]
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://kezeng.xyz" # the base hostname & protocol for your site, e.g. http://example.com
 domain: "kezeng.xyz" # the domain name for your site, e.g. example.com
-language: en
+language: zh-tw
 # Supported languages list:
 # en: English
 # de: Deutsche (German)
